--- a/KeyBind Website/css/style.css
+++ b/KeyBind Website/css/style.css
@@ -611,6 +611,7 @@ td.text-right {
 			font-size: 1.6em;
 		}
 
+
 /* Wrapper */
 
 	.wrapper.style1 {
@@ -759,3 +760,62 @@ td.text-right {
 		text-align: center;
 		border-radius: 0px 0px 6px 6px;
 	}
+
+/* Menu */
+#cssmenu,
+#cssmenu ul,
+#cssmenu li,
+#cssmenu a {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    list-style: none;
+    font-weight: normal;
+    text-decoration: none;
+    line-height: 1;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    position: relative;
+	color: #fff;
+}
+
+#cssmenu a {
+    line-height: 1.3;
+}
+/*boxes*/
+#cssmenu {
+    width: 13%;
+
+}
+/* top down spacing */
+#cssmenu>ul>li {
+    margin: 0 0 2px 0;
+}
+
+#cssmenu>ul>li:last-child {
+    margin: 0;
+}
+
+#cssmenu>ul>li>a {
+    font-size: 15px;
+    display: block;
+    color: #fff;
+    text-shadow: 0 1px 1px #000;
+    background: #fff;
+    border: 1px solid #0f1116;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+#cssmenu>ul>li>a>span {
+    display: block;
+    border: 1px solid #0f1116;
+    padding: 6px 10px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+
